# shtimer

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_shtimer  index.html  install_html  params.json  setup_shtimer  shtimer  uninstall_html  uninstall_shtimer
html/: index.html  install
src/: CMakeLists.txt  Makefile  caboutdlg.cpp  caboutdlg.h  cmainwindow.cpp  cmainwindow.h  shtimer.cpp  src.pro
src/pixmap/: aboutsplash.xpm
